# src/api/order.go
@@ -1,6 +1,7 @@
 package api
 
 import (
+	"sync"
 	tradeBll "zerologix-homework/src/bll/trade"
 	"zerologix-homework/src/server/reqs"
 	"zerologix-homework/src/server/resp"
@@ -16,6 +17,34 @@ func NewOrder(
 	return &Order{
 		tradeLogic: tradeLogic,
 	}
+}
+
+func (l Order) PostTest(req *reqs.OrderPostTest) (
+	result resp.OrderPostTest,
+	resultErr error,
+) {
+	runTimes := req.RunTimes
+	r := req.OrderPostBuy
+	wg := sync.WaitGroup{}
+	for i := 0; i < runTimes; i++ {
+		wg.Add(1)
+		go func() {
+			defer wg.Done()
+			l.PostBuy(&r)
+		}()
+		wg.Add(1)
+		go func() {
+			defer wg.Done()
+			l.PostSell(&reqs.OrderPostSell{
+				OrderPostBuy: r,
+			})
+		}()
+	}
+
+	wg.Wait()
+	result.Message = "OK"
+
+	return
 }
 
 func (l Order) PostBuy(req *reqs.OrderPostBuy) (
