# src/server/resp/order.go
@@ -1,5 +1,9 @@
 package resp
 
+type OrderPostTest struct {
+	Message string `json:"message"`
+}
+
 type OrderPostBuy struct {
 	Message string `json:"message"`
 }
